--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "the json server for quick demo.",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "multer": "^1.4.2"
   },
   "devDependencies": {},
   "scripts": {
